kubernetes/apps/velero-ui/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: velero-ui
  namespace: velero
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Velero
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: velero.png
    gethomepage.dev/href: https://velero.${cluster_domain}
    gethomepage.dev/podSelector: app.kubernetes.io/name=velero-ui
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`velero.${cluster_domain}`)
      kind: Rule
      services:
        - name: velero-ui
          port: 3000
  tls: {}
